--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -6,16 +6,17 @@
     <title>RaidhOS</title>
     <style>
       :root {
-        --bg: #eef2f7;
-        --ink: #0f172a;
-        --muted: #5b6576;
-        --accent: #0d3b66;
-        --accent-2: #f4b740;
-        --card: rgba(255, 255, 255, 0.78);
-        --stroke: rgba(15, 23, 42, 0.08);
-        --glow: rgba(15, 23, 42, 0.08);
+        --bg: #000000;
+        --ink: #e7edf6;
+        --muted: #98a6b8;
+        --accent: #5b8cff;
+        --accent-2: #a855f7;
+        --accent-3: #00d1ff;
+        --card: rgba(10, 14, 22, 0.86);
+        --stroke: rgba(148, 163, 184, 0.2);
+        --glow: rgba(91, 140, 255, 0.28);
         --radius: 18px;
-        --shadow: 0 22px 60px rgba(15, 23, 42, 0.12);
+        --shadow: 0 20px 60px rgba(0, 0, 0, 0.7);
       }
 
       * {
@@ -27,9 +28,7 @@
         min-height: 100vh;
         display: grid;
         place-items: center;
-        background:
-          radial-gradient(1200px 800px at 15% 10%, #f9fbff 0%, #eef2f7 55%, #e5eaf2 100%),
-          linear-gradient(120deg, #f2f5fb 0%, #edf1f7 100%);
+        background: var(--bg);
         color: var(--ink);
         font-family: "Avenir Next", "SF Pro Display", "Segoe UI Variable", "Noto Sans", "Ubuntu", sans-serif;
         letter-spacing: 0.2px;
@@ -57,8 +56,8 @@
         width: 44px;
         height: 44px;
         border-radius: 14px;
-        background: linear-gradient(145deg, #0d3b66 0%, #163a5f 100%);
-        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.12), 0 10px 24px rgba(13, 59, 102, 0.3);
+        background: linear-gradient(135deg, #5b8cff 0%, #7b61ff 45%, #a855f7 100%);
+        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.12), 0 10px 30px rgba(91, 140, 255, 0.45);
         display: grid;
         place-items: center;
         color: #fff;
@@ -110,9 +109,9 @@
       }
 
       .primary {
-        background: var(--accent);
+        background: linear-gradient(135deg, #5b8cff 0%, #7b61ff 45%, #a855f7 100%);
         color: #fff;
-        box-shadow: 0 14px 30px rgba(13, 59, 102, 0.25);
+        box-shadow: 0 16px 40px rgba(91, 140, 255, 0.45);
       }
 
       .primary:hover {
@@ -121,7 +120,8 @@
 
       .ghost {
         background: transparent;
-        border: 1px solid rgba(15, 23, 42, 0.15);
+        border: 1px solid rgba(148, 163, 184, 0.3);
+        color: var(--ink);
       }
 
       .disks {
@@ -135,20 +135,20 @@
         align-items: center;
         padding: 14px 16px;
         border-radius: 14px;
-        border: 1px solid rgba(15, 23, 42, 0.08);
-        background: rgba(255, 255, 255, 0.72);
+        border: 1px solid rgba(148, 163, 184, 0.18);
+        background: rgba(8, 12, 20, 0.9);
         transition: transform 160ms ease, box-shadow 160ms ease;
         cursor: pointer;
       }
 
       .disk.selected {
-        border-color: rgba(13, 59, 102, 0.4);
-        box-shadow: 0 12px 30px rgba(13, 59, 102, 0.18);
+        border-color: rgba(91, 140, 255, 0.6);
+        box-shadow: 0 12px 30px rgba(91, 140, 255, 0.25);
       }
 
       .disk:hover {
         transform: translateY(-1px);
-        box-shadow: 0 16px 40px var(--glow);
+        box-shadow: 0 16px 40px rgba(0, 209, 255, 0.12);
       }
 
       .disk strong {
@@ -161,8 +161,8 @@
 
       .pill {
         padding: 6px 10px;
-        background: rgba(13, 59, 102, 0.12);
-        color: var(--accent);
+        background: rgba(91, 140, 255, 0.16);
+        color: #b9d0ff;
         border-radius: 999px;
         font-size: 12px;
         font-weight: 600;
@@ -183,16 +183,18 @@
         gap: 10px;
         padding: 14px;
         border-radius: 14px;
-        border: 1px dashed rgba(15, 23, 42, 0.18);
-        background: rgba(255, 255, 255, 0.6);
+        border: 1px dashed rgba(148, 163, 184, 0.3);
+        background: rgba(8, 12, 20, 0.85);
       }
 
       input {
         width: 100%;
         border-radius: 10px;
         padding: 10px 12px;
-        border: 1px solid rgba(15, 23, 42, 0.2);
+        border: 1px solid rgba(148, 163, 184, 0.3);
         font-size: 14px;
+        background: rgba(6, 9, 15, 0.9);
+        color: var(--ink);
       }
 
       .progress {
@@ -203,7 +205,7 @@
       .progress-item {
         display: flex;
         justify-content: space-between;
-        background: rgba(15, 23, 42, 0.04);
+        background: rgba(148, 163, 184, 0.08);
         border-radius: 10px;
         padding: 8px 10px;
         font-size: 13px;
@@ -228,7 +230,7 @@
       .splash {
         position: fixed;
         inset: 0;
-        background: radial-gradient(900px 700px at 50% 40%, #ffffff 0%, #f2f5fb 55%, #e9edf4 100%);
+        background: #000000;
         display: grid;
         place-items: center;
         z-index: 999;
@@ -245,10 +247,11 @@
         width: 140px;
         height: 140px;
         border-radius: 44px;
-        background: radial-gradient(120px 120px at 35% 30%, #ffffff, #f7f8fb 60%, #e9edf4 100%);
+        background: radial-gradient(120px 120px at 35% 30%, #ffffff, #f2f4f8 60%, #dfe6f2 100%);
         box-shadow:
-          0 30px 80px rgba(15, 23, 42, 0.22),
-          inset 0 0 0 1px rgba(255, 255, 255, 0.7);
+          0 0 40px rgba(255, 255, 255, 0.25),
+          0 0 120px rgba(91, 140, 255, 0.25),
+          0 0 200px rgba(168, 85, 247, 0.18);
         display: grid;
         place-items: center;
         position: relative;
@@ -259,17 +262,17 @@
         content: "";
         position: absolute;
         inset: -40%;
-        background: conic-gradient(from 120deg, transparent 0deg, rgba(255, 255, 255, 0.85) 90deg, transparent 180deg);
+        background: conic-gradient(from 120deg, transparent 0deg, rgba(255, 255, 255, 0.8) 90deg, transparent 180deg);
         animation: sweep 2.6s linear infinite;
       }
 
       .splash-glyph {
         font-size: 80px;
-        color: #0f172a;
+        color: #0b0f17;
         text-shadow:
-          0 0 8px rgba(255, 255, 255, 0.9),
-          0 0 22px rgba(255, 255, 255, 0.6),
-          0 10px 24px rgba(15, 23, 42, 0.2);
+          0 0 12px rgba(255, 255, 255, 0.9),
+          0 0 28px rgba(91, 140, 255, 0.55),
+          0 0 36px rgba(168, 85, 247, 0.35);
         z-index: 1;
       }
 
@@ -277,7 +280,7 @@
         margin-top: 20px;
         font-size: 13px;
         letter-spacing: 1.2px;
-        color: #76839a;
+        color: #9aa7b8;
       }
 
       @keyframes sweep {
