--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -7,16 +7,16 @@
     <style>
       :root {
         --bg: #000000;
-        --ink: #e7edf6;
-        --muted: #98a6b8;
-        --accent: #5b8cff;
-        --accent-2: #a855f7;
-        --accent-3: #00d1ff;
-        --card: rgba(10, 14, 22, 0.86);
-        --stroke: rgba(148, 163, 184, 0.2);
-        --glow: rgba(91, 140, 255, 0.28);
+        --ink: #f2f6ff;
+        --muted: #b8c4d6;
+        --accent: #1e4fd6;
+        --accent-2: #6d3bf2;
+        --accent-3: #0aa0c8;
+        --card: rgba(10, 14, 22, 0.92);
+        --stroke: rgba(186, 200, 221, 0.45);
+        --glow: rgba(30, 79, 214, 0.35);
         --radius: 18px;
-        --shadow: 0 20px 60px rgba(0, 0, 0, 0.7);
+        --shadow: 0 20px 60px rgba(0, 0, 0, 0.75);
       }
 
       * {
@@ -56,8 +56,8 @@
         width: 44px;
         height: 44px;
         border-radius: 14px;
-        background: linear-gradient(135deg, #5b8cff 0%, #7b61ff 45%, #a855f7 100%);
-        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.12), 0 10px 30px rgba(91, 140, 255, 0.45);
+        background: linear-gradient(135deg, #1e4fd6 0%, #3b46f0 45%, #6d3bf2 100%);
+        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.28), 0 10px 30px rgba(30, 79, 214, 0.45);
         display: grid;
         place-items: center;
         color: #fff;
@@ -109,9 +109,9 @@
       }
 
       .primary {
-        background: linear-gradient(135deg, #5b8cff 0%, #7b61ff 45%, #a855f7 100%);
+        background: linear-gradient(135deg, #1e4fd6 0%, #3b46f0 45%, #6d3bf2 100%);
         color: #fff;
-        box-shadow: 0 16px 40px rgba(91, 140, 255, 0.45);
+        box-shadow: 0 16px 40px rgba(30, 79, 214, 0.5);
       }
 
       .primary:hover {
@@ -120,7 +120,7 @@
 
       .ghost {
         background: transparent;
-        border: 1px solid rgba(148, 163, 184, 0.3);
+        border: 1px solid rgba(186, 200, 221, 0.6);
         color: var(--ink);
       }
 
@@ -135,20 +135,20 @@
         align-items: center;
         padding: 14px 16px;
         border-radius: 14px;
-        border: 1px solid rgba(148, 163, 184, 0.18);
+        border: 1px solid rgba(186, 200, 221, 0.35);
         background: rgba(8, 12, 20, 0.9);
         transition: transform 160ms ease, box-shadow 160ms ease;
         cursor: pointer;
       }
 
       .disk.selected {
-        border-color: rgba(91, 140, 255, 0.6);
-        box-shadow: 0 12px 30px rgba(91, 140, 255, 0.25);
+        border-color: rgba(30, 79, 214, 0.8);
+        box-shadow: 0 12px 30px rgba(30, 79, 214, 0.35);
       }
 
       .disk:hover {
         transform: translateY(-1px);
-        box-shadow: 0 16px 40px rgba(0, 209, 255, 0.12);
+        box-shadow: 0 16px 40px rgba(10, 160, 200, 0.18);
       }
 
       .disk strong {
@@ -161,8 +161,8 @@
 
       .pill {
         padding: 6px 10px;
-        background: rgba(91, 140, 255, 0.16);
-        color: #b9d0ff;
+        background: rgba(30, 79, 214, 0.28);
+        color: #e8f0ff;
         border-radius: 999px;
         font-size: 12px;
         font-weight: 600;
@@ -183,7 +183,7 @@
         gap: 10px;
         padding: 14px;
         border-radius: 14px;
-        border: 1px dashed rgba(148, 163, 184, 0.3);
+        border: 1px dashed rgba(186, 200, 221, 0.55);
         background: rgba(8, 12, 20, 0.85);
       }
 
@@ -191,7 +191,7 @@
         width: 100%;
         border-radius: 10px;
         padding: 10px 12px;
-        border: 1px solid rgba(148, 163, 184, 0.3);
+        border: 1px solid rgba(186, 200, 221, 0.6);
         font-size: 14px;
         background: rgba(6, 9, 15, 0.9);
         color: var(--ink);
@@ -205,7 +205,7 @@
       .progress-item {
         display: flex;
         justify-content: space-between;
-        background: rgba(148, 163, 184, 0.08);
+        background: rgba(186, 200, 221, 0.12);
         border-radius: 10px;
         padding: 8px 10px;
         font-size: 13px;
@@ -250,8 +250,8 @@
         background: radial-gradient(120px 120px at 35% 30%, #ffffff, #f2f4f8 60%, #dfe6f2 100%);
         box-shadow:
           0 0 40px rgba(255, 255, 255, 0.25),
-          0 0 120px rgba(91, 140, 255, 0.25),
-          0 0 200px rgba(168, 85, 247, 0.18);
+          0 0 120px rgba(30, 79, 214, 0.25),
+          0 0 200px rgba(109, 59, 242, 0.18);
         display: grid;
         place-items: center;
         position: relative;
@@ -271,8 +271,8 @@
         color: #0b0f17;
         text-shadow:
           0 0 12px rgba(255, 255, 255, 0.9),
-          0 0 28px rgba(91, 140, 255, 0.55),
-          0 0 36px rgba(168, 85, 247, 0.35);
+          0 0 28px rgba(30, 79, 214, 0.55),
+          0 0 36px rgba(109, 59, 242, 0.35);
         z-index: 1;
       }
 
