Darken accent palette to meet AAA contrast ratios

--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -9,9 +9,9 @@
         --bg: #000000;
         --ink: #f2f6ff;
         --muted: #b8c4d6;
-        --accent: #1e4fd6;
-        --accent-2: #6d3bf2;
-        --accent-3: #0aa0c8;
+        --accent: #1b3fb3;
+        --accent-2: #5a2bd6;
+        --accent-3: #096178;
         --card: rgba(10, 14, 22, 0.92);
         --stroke: rgba(186, 200, 221, 0.45);
         --glow: rgba(30, 79, 214, 0.35);
@@ -56,8 +56,8 @@
         width: 44px;
         height: 44px;
         border-radius: 14px;
-        background: linear-gradient(135deg, #1e4fd6 0%, #3b46f0 45%, #6d3bf2 100%);
-        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.28), 0 10px 30px rgba(30, 79, 214, 0.45);
+        background: linear-gradient(135deg, #1b3fb3 0%, #3040d6 45%, #5a2bd6 100%);
+        box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.28), 0 10px 30px rgba(27, 63, 179, 0.45);
         display: grid;
         place-items: center;
         color: #fff;
@@ -109,9 +109,9 @@
       }
 
       .primary {
-        background: linear-gradient(135deg, #1e4fd6 0%, #3b46f0 45%, #6d3bf2 100%);
+        background: linear-gradient(135deg, #1b3fb3 0%, #3040d6 45%, #5a2bd6 100%);
         color: #fff;
-        box-shadow: 0 16px 40px rgba(30, 79, 214, 0.5);
+        box-shadow: 0 16px 40px rgba(27, 63, 179, 0.5);
       }
 
       .primary:hover {
@@ -142,13 +142,13 @@
       }
 
       .disk.selected {
-        border-color: rgba(30, 79, 214, 0.8);
-        box-shadow: 0 12px 30px rgba(30, 79, 214, 0.35);
+        border-color: rgba(27, 63, 179, 0.85);
+        box-shadow: 0 12px 30px rgba(27, 63, 179, 0.4);
       }
 
       .disk:hover {
         transform: translateY(-1px);
-        box-shadow: 0 16px 40px rgba(10, 160, 200, 0.18);
+        box-shadow: 0 16px 40px rgba(9, 97, 120, 0.22);
       }
 
       .disk strong {
@@ -161,7 +161,7 @@
 
       .pill {
         padding: 6px 10px;
-        background: rgba(30, 79, 214, 0.28);
+        background: rgba(27, 63, 179, 0.32);
         color: #e8f0ff;
         border-radius: 999px;
         font-size: 12px;
@@ -250,8 +250,8 @@
         background: radial-gradient(120px 120px at 35% 30%, #ffffff, #f2f4f8 60%, #dfe6f2 100%);
         box-shadow:
           0 0 40px rgba(255, 255, 255, 0.25),
-          0 0 120px rgba(30, 79, 214, 0.25),
-          0 0 200px rgba(109, 59, 242, 0.18);
+          0 0 120px rgba(27, 63, 179, 0.25),
+          0 0 200px rgba(90, 43, 214, 0.18);
         display: grid;
         place-items: center;
         position: relative;
@@ -271,8 +271,8 @@
         color: #0b0f17;
         text-shadow:
           0 0 12px rgba(255, 255, 255, 0.9),
-          0 0 28px rgba(30, 79, 214, 0.55),
-          0 0 36px rgba(109, 59, 242, 0.35);
+          0 0 28px rgba(27, 63, 179, 0.55),
+          0 0 36px rgba(90, 43, 214, 0.35);
         z-index: 1;
       }
 
