--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -15,8 +15,23 @@
         --card: rgba(10, 14, 22, 0.92);
         --stroke: rgba(186, 200, 221, 0.45);
         --glow: rgba(30, 79, 214, 0.35);
-        --radius: 18px;
         --shadow: 0 20px 60px rgba(0, 0, 0, 0.75);
+        --space-1: 4px;
+        --space-2: 6px;
+        --space-3: 10px;
+        --space-4: 16px;
+        --space-5: 26px;
+        --space-6: 42px;
+        --space-7: 68px;
+        --space-8: 110px;
+        --radius-sm: var(--space-2);
+        --radius-md: var(--space-4);
+        --radius-lg: var(--space-5);
+        --font-xs: 12px;
+        --font-sm: 13px;
+        --font-md: 16px;
+        --font-lg: 18px;
+        --font-xl: 32px;
       }
 
       * {
@@ -37,25 +52,26 @@
       .shell {
         width: min(980px, 92vw);
         display: grid;
-        gap: 20px;
+        gap: var(--space-5);
       }
 
       header {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: var(--space-4);
       }
 
       .brand {
         display: flex;
         align-items: center;
-        gap: 14px;
+        gap: var(--space-4);
       }
 
       .logo {
-        width: 44px;
-        height: 44px;
-        border-radius: 14px;
+        width: var(--space-6);
+        height: var(--space-6);
+        border-radius: var(--radius-lg);
         background: linear-gradient(135deg, #1b3fb3 0%, #3040d6 45%, #5a2bd6 100%);
         box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.28), 0 10px 30px rgba(27, 63, 179, 0.45);
         display: grid;
@@ -66,38 +82,38 @@
       }
 
       h1 {
-        font-size: 30px;
+        font-size: var(--font-xl);
         margin: 0;
       }
 
       h2 {
-        margin: 0 0 8px 0;
-        font-size: 18px;
+        margin: 0 0 var(--space-2) 0;
+        font-size: var(--font-lg);
       }
 
       .subtitle {
         color: var(--muted);
-        margin: 4px 0 0 0;
+        margin: var(--space-1) 0 0 0;
       }
 
       .card {
         background: var(--card);
-        border-radius: var(--radius);
+        border-radius: var(--radius-lg);
         border: 1px solid var(--stroke);
-        padding: 22px;
+        padding: var(--space-5);
         box-shadow: var(--shadow);
         backdrop-filter: blur(16px);
       }
 
       .actions {
         display: flex;
-        gap: 12px;
+        gap: var(--space-3);
       }
 
       button {
         border: 0;
-        border-radius: 12px;
-        padding: 10px 16px;
+        border-radius: var(--radius-md);
+        padding: var(--space-3) var(--space-4);
         font-weight: 600;
         cursor: pointer;
         transition: transform 160ms ease, box-shadow 160ms ease;
@@ -126,15 +142,15 @@
 
       .disks {
         display: grid;
-        gap: 12px;
+        gap: var(--space-3);
       }
 
       .disk {
         display: grid;
         grid-template-columns: 1fr auto;
         align-items: center;
-        padding: 14px 16px;
-        border-radius: 14px;
+        padding: var(--space-4) var(--space-4);
+        border-radius: var(--radius-md);
         border: 1px solid rgba(186, 200, 221, 0.35);
         background: rgba(8, 12, 20, 0.9);
         transition: transform 160ms ease, box-shadow 160ms ease;
@@ -164,51 +180,51 @@
         background: rgba(27, 63, 179, 0.32);
         color: #e8f0ff;
         border-radius: 999px;
-        font-size: 12px;
+        font-size: var(--font-xs);
         font-weight: 600;
       }
 
       .footer {
         color: var(--muted);
-        font-size: 12px;
+        font-size: var(--font-xs);
       }
 
       .panel {
         display: grid;
-        gap: 12px;
+        gap: var(--space-3);
       }
 
       .confirm {
         display: grid;
-        gap: 10px;
-        padding: 14px;
-        border-radius: 14px;
+        gap: var(--space-3);
+        padding: var(--space-4);
+        border-radius: var(--radius-md);
         border: 1px dashed rgba(186, 200, 221, 0.55);
         background: rgba(8, 12, 20, 0.85);
       }
 
       input {
         width: 100%;
-        border-radius: 10px;
-        padding: 10px 12px;
+        border-radius: var(--radius-md);
+        padding: var(--space-3) var(--space-4);
         border: 1px solid rgba(186, 200, 221, 0.6);
-        font-size: 14px;
+        font-size: var(--font-md);
         background: rgba(6, 9, 15, 0.9);
         color: var(--ink);
       }
 
       .progress {
         display: grid;
-        gap: 8px;
+        gap: var(--space-2);
       }
 
       .progress-item {
         display: flex;
         justify-content: space-between;
         background: rgba(186, 200, 221, 0.12);
-        border-radius: 10px;
-        padding: 8px 10px;
-        font-size: 13px;
+        border-radius: var(--radius-md);
+        padding: var(--space-2) var(--space-3);
+        font-size: var(--font-sm);
       }
 
       @keyframes fadeUp {
@@ -244,9 +260,9 @@
       }
 
       .splash-logo {
-        width: 140px;
-        height: 140px;
-        border-radius: 44px;
+        width: var(--space-8);
+        height: var(--space-8);
+        border-radius: var(--space-7);
         background: radial-gradient(120px 120px at 35% 30%, #ffffff, #f2f4f8 60%, #dfe6f2 100%);
         box-shadow:
           0 0 40px rgba(255, 255, 255, 0.25),
@@ -267,7 +283,7 @@
       }
 
       .splash-glyph {
-        font-size: 80px;
+        font-size: 84px;
         color: #0b0f17;
         text-shadow:
           0 0 12px rgba(255, 255, 255, 0.9),
@@ -277,8 +293,8 @@
       }
 
       .splash-text {
-        margin-top: 20px;
-        font-size: 13px;
+        margin-top: var(--space-4);
+        font-size: var(--font-sm);
         letter-spacing: 1.2px;
         color: #9aa7b8;
       }
