Align typography and pills to golden ratio scale

--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -32,11 +32,11 @@
         --icon-lg: var(--space-6);
         --icon-xl: var(--space-7);
         --icon-xxl: var(--space-8);
-        --font-xs: 12px;
-        --font-sm: 13px;
-        --font-md: 16px;
-        --font-lg: 18px;
-        --font-xl: 32px;
+        --font-xs: var(--space-3);
+        --font-sm: var(--space-4);
+        --font-md: var(--space-5);
+        --font-lg: var(--space-6);
+        --font-xl: var(--space-7);
       }
 
       * {
@@ -52,6 +52,7 @@
         color: var(--ink);
         font-family: "Avenir Next", "SF Pro Display", "Segoe UI Variable", "Noto Sans", "Ubuntu", sans-serif;
         letter-spacing: 0.2px;
+        font-size: var(--font-sm);
       }
 
       .shell {
@@ -87,13 +88,13 @@
       }
 
       h1 {
-        font-size: var(--font-xl);
+        font-size: var(--font-lg);
         margin: 0;
       }
 
       h2 {
         margin: 0 0 var(--space-2) 0;
-        font-size: var(--font-lg);
+        font-size: var(--font-md);
       }
 
       .subtitle {
@@ -182,7 +183,7 @@
       }
 
       .pill {
-        padding: 6px 10px;
+        padding: var(--space-2) var(--space-3);
         background: rgba(27, 63, 179, 0.32);
         color: #e8f0ff;
         border-radius: 999px;
@@ -214,7 +215,7 @@
         border-radius: var(--radius-md);
         padding: var(--space-3) var(--space-4);
         border: 1px solid rgba(186, 200, 221, 0.6);
-        font-size: var(--font-md);
+        font-size: var(--font-sm);
         background: rgba(6, 9, 15, 0.9);
         color: var(--ink);
       }
@@ -289,7 +290,7 @@
       }
 
       .splash-glyph {
-        font-size: 84px;
+        font-size: var(--font-xl);
         color: #0b0f17;
         text-shadow:
           0 0 12px rgba(255, 255, 255, 0.9),
